--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "body-parser": "^1.18.3",
+    "bootstrap": "^3.4.0",
     "core-js": "^2.5.4",
     "crypto": "^1.0.1",
     "express": "^4.16.4",
+    "jquery": "^3.3.1",
     "jsonwebtoken": "^8.4.0",
     "jwt-decode": "^2.2.0",
     "mongoose": "^5.4.3",
