--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "build": "ng build",
     "test": "mocha",
     "lint": "ng lint",
+    "postinstall": "ng build --prod",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.1.4",
+    "@angular/cli": "~7.1.4",
+    "@angular/compiler-cli": "~7.1.0",
     "@angular/cdk": "^7.2.0",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
@@ -33,12 +36,11 @@
     "morgan": "^1.9.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "typescript": "~3.1.6",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.11.4",
-    "@angular/cli": "~7.1.4",
-    "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
@@ -53,7 +55,6 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
+    "tslint": "~5.11.0"
   }
 }
